--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -80,7 +80,7 @@
       </table>
     </div>
   </div>
-  <div class="col-sm-4 sidebar-wrapper">
+  <div class="col-sm-4 sidebar-wrapper-right-padding">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
@@ -88,7 +88,6 @@
         </h3>
       </div>
       <div class="panel-body">
-
 
 
             <div class="btn-group-vertical" style="width: 100%;">
