--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <body>
     <nav class="navbar navbar-default">
+
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -54,27 +55,30 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <div class="container-fluid">
-      <% if notice || alert %>
+    <div class="main">
+
+      <div class="container-fluid">
+        <% if notice || alert %>
         <%# the ternary is used to set the alert type based on whether we received
         notification or an alert %>
         <div
-          class="alert alert-<%= notice ? 'success' : 'danger'%> alert-dismissable"
-          role="alert">
-          <%= notice || alert %>
+        class="alert alert-<%= notice ? 'success' : 'danger'%> alert-dismissable"
+        role="alert">
+        <%= notice || alert %>
 
-          <%# add x button to close notification element %>
-          <button
-            type="button"
-            class="close"
-            data-dismiss="alert"
-            aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-      <% end %>
+        <%# add x button to close notification element %>
+        <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <% end %>
 
-      <%= yield %>
+    <%= yield %>
+  </div>
     </div>
   </body>
 </html>
