--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -4,12 +4,6 @@
 <div id="modal-window" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 </div>
 
-<div class="row">
-  <div class="col-sm-4">
-    <%= pie_chart [["Managers Signed Up", @managers_signed_up], ["Not Signed Up", @managers_not_signed_up]], colors: ["#5CB85C", "#D9534F"] %>
-  </div>
-</div>
-
 
 <div class ="row">
   <div class="col-sm-8">
@@ -20,6 +14,61 @@
         </h3>
       </div>
       <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-8">
+            <%= pie_chart [["Signed Up - Active", @managers_signed_up_active],["Signed Up - No Entries", @managers_signed_up_inactive], ["Not Signed Up", @managers_not_signed_up]], colors: ["#5CB85C", "yellow", "#D9534F"] %>
+          </div>
+          <div class="col-sm-4" >
+
+            <div class="panel panel-yellow">
+              <!-- <i class="glyphicon glyphicon-exclamation-sign panel-close" aria-hidden="true" > </i> -->
+              <div class="panel-heading">
+                <div class="flex-row">
+                  <i class="glyphicon glyphicon-exclamation-sign panel-icon" aria-hidden="true" > </i>
+                  <div>
+                    <div class="panel-number text-right">
+                      <span><%= @managers_signed_up_inactive %></span>
+                    </div>
+                    <div class="text-right">
+                      <span>Inactive Managers</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel-footer" >
+                <div class="flex-row">
+                  <%= link_to "View Details", nil, class:"panel-link" %>
+                </div>
+              </div>
+            </div>
+
+            <div class="panel panel-red">
+              <!-- <i class="glyphicon glyphicon-exclamation-sign panel-close" aria-hidden="true" > </i> -->
+              <div class="panel-heading">
+                <div class="flex-row">
+                  <i class="glyphicon glyphicon-exclamation-sign panel-icon" aria-hidden="true" > </i>
+                  <div>
+                    <div class="panel-number text-right">
+                      <span><%= @managers_not_signed_up %></span>
+                    </div>
+                    <div class="text-right">
+                      <span>Managers Not Signed Up</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="panel-footer" >
+                <div class="flex-row">
+                  <%= link_to "View Details", nil, class:"panel-link" %>
+                </div>
+              </div>
+            </div>
+
+
+
+          </div>
+        </div>
+
         <p>Some default panel content here. Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
       </div>
       <table class="table table-striped table-condensed">
@@ -57,6 +106,17 @@
         </h3>
       </div>
       <div class="panel-body">
+        <div class="row">
+          <div class="col-sm-8">
+              <%= pie_chart [["Signed Up - Active", @employees_signed_up_active],["Signed Up - No Entries", @employees_signed_up_inactive], ["Not Signed Up", @employees_not_signed_up]], colors: ["#5CB85C", "yellow", "#D9534F"] %>
+          </div>
+
+
+
+        </div>
+
+
+
         <p>Some default panel content here. Nulla vitae elit libero, a pharetra augue. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
       </div>
       <table class="table table-striped table-condensed">
