--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -8,6 +8,7 @@
   position: fixed;
   right: 0;
 
+
 }
 
 .navbar {
@@ -16,4 +17,12 @@
 
 .main {
   margin-top: 20px;
+}
+
+.action-wrapper {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
 }
