--- a/app/views/manager_surveys/new.html.erb
+++ b/app/views/manager_surveys/new.html.erb
@@ -1,20 +1,21 @@
 
 <div class="row">
-  <div class="col-sm-9 ">
+  <div class="col-sm-10 ">
 
     <%= @manager_survey.errors.full_messages.join(", ") %>
 
-    <% @study = params['study_id'].to_i %>
+    <%# @study = params['study_id'].to_i %>
     <%= simple_form_for (@manager_survey), :url => study_manager_surveys_path(@study) do |f|%>
-    <div class="panel panel-default">
-      <div class="panel-heading">
+    <div class="panel panel-primary">
+      <div class="panel-heading panel-heading-form">
+        <%= f.submit class: "btn btn-default pull-right", value: "Save" %>
         <h3 class="panel-title">Form Name</h3>
       </div>
       <div class="panel-body">
 
         <div class="form-group">
           <%#= f.label :form_name %>
-          <%= f.text_field :form_name, class: "form-control" %>
+          <%= f.text_field :form_name, class: "form-control", value: "#{@study.title} -- Manager Time #{@survey_number}" %>
         </div>
       </div>
     </div>
@@ -24,13 +25,12 @@
     </div>
 
 
-    <%= f.submit class: "btn btn-default" %>
 
 
   </div>
 
-  <div class="col-sm-3 sidebar-wrapper">
-    <div class="panel panel-default">
+  <div class="col-sm-2 sidebar-wrapper">
+    <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title">
           Add Question Types
@@ -40,9 +40,24 @@
         <div class="btn-group-vertical" style="width: 100%">
 
 
-          <%= link_to_add_association 'Add MC Question', f, :questions, partial: 'manager_surveys/mc_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default' %>
-          <%= link_to_add_association 'Add Checklist Question', f, :questions, partial: 'manager_surveys/checklist_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default' %>
-          <%= link_to_add_association 'Add Matrix Question', f, :questions, partial: 'manager_surveys/matrix_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default', width: '100%'%>
+          <%= link_to_add_association f, :questions, partial: 'manager_surveys/mc_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default' do %>
+            <div class="text-left">
+              <i class="glyphicon glyphicon-list question-icon" aria-hidden="true" > </i>
+              Multiple Choice
+            </div>
+          <% end %>
+          <%= link_to_add_association  f, :questions, partial: 'manager_surveys/checklist_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default' do %>
+            <div class="text-left">
+              <i class="glyphicon glyphicon-check question-icon" aria-hidden="true" > </i>
+              Check Box
+            </div>
+          <% end %>
+          <%= link_to_add_association  f, :questions, partial: 'manager_surveys/matrix_question_fields', 'data-association-insertion-node' => ".form", class: 'btn btn-default', width: '100%' do %>
+            <div class="text-left">
+              <i class="glyphicon glyphicon-th question-icon" aria-hidden="true" > </i>
+              Matrix Question
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
