--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -2,13 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.sidebar-wrapper-right-padding {
+.sidebar-wrapper {
 
   height: 100vh;
   position: fixed;
   right: 0;
-
-
 }
 
 .navbar {
