--- a/app/views/employee_surveys/_matrix_question_fields.html.erb
+++ b/app/views/employee_surveys/_matrix_question_fields.html.erb
@@ -1,20 +1,36 @@
 <div class="matrix-container">
   <hr />
-  <div class="panel panel-default">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <h3 class="panel-title">
+        Matrix Question
+        <%= link_to_remove_association  f, wrapper_class: 'matrix-container' do %>
+          <i class="glyphicon glyphicon-trash upper-right-icon pull-right"      aria-hidden="true" >
+          </i>
+        <% end %>
+      </h3>
+    </div>
+
+
 
     <div class="panel-body">
 
       <%#= f.label "MC Question Body" %>
       <%= f.text_field :kind, value: "matrix", class: "hidden"%>
       <%= f.text_field :body, class: "form-control", placeholder: "Matrix Question Body Here" %>
-      <%= f.text_field :matrix_headings, class: "form-control", placeholder: " Matrix Headers Seperated By Commas Here (e.g Very Dissatisfied, Dissatisfied, Netural, Satisfied, Very Satisfied )" %>
+      <br />
+      <div class="form-group">
+
+        <%= f.text_field :matrix_headings, class: "form-control", value: "Very Dissatisfied, Dissatisfied, Netural, Satisfied, Very Satisfied" %>
+        <label> Matrix Headers (seperate with commas) </label>
+      </div>
 
       <br />
-      <%= link_to_add_association'+ Row', f, :options, partial: 'manager_surveys/options/matrix_option_fields', 'data-association-insertion-method' => 'append', class: "btn btn-default"
+      <%= link_to_add_association'+ Row', f, :options, partial: 'employee_surveys/options/matrix_option_fields', 'data-association-insertion-method' => 'append', class: "btn btn-default"
       %>
 
 
-      <%= link_to_remove_association "Remove Question", f, wrapper_class: 'matrix-container', class: 'btn btn-default' %>
+
     </div>
   </div>
 </div>
