--- a/app/views/employee_surveys/_mc_question_fields.html.erb
+++ b/app/views/employee_surveys/_mc_question_fields.html.erb
@@ -1,6 +1,12 @@
 <div class="mc-container">
   <hr />
-  <div class="panel panel-default">
+  <div class="panel panel-primary">
+    <div class="panel-heading panel-heading">
+      <h3 class="panel-title">Multiple Choice Question <%= link_to_remove_association  f, wrapper_class: 'mc-container' do %>
+      <i class="glyphicon glyphicon-trash upper-right-icon pull-right" aria-hidden="true" > </i>
+      <% end %></h3>
+
+    </div>
 
     <div class="panel-body">
 
@@ -14,7 +20,7 @@
       %>
 
 
-      <%= link_to_remove_association "Remove Question", f, wrapper_class: 'mc-container', class: 'btn btn-default' %>
+
     </div>
   </div>
 </div>
