--- a/app/views/employee_surveys/options/_checklist_option_fields.html.erb
+++ b/app/views/employee_surveys/options/_checklist_option_fields.html.erb
@@ -2,7 +2,7 @@
 <div class="checkbox">
 
     <label>
-      <%= check_box_tag  class: "checkbox"%> <%= f.text_field :content,  class: "form-control", placeholder: "Check Option" %>
+      <%= check_box_tag  class: "checkbox"%> <%= f.text_field :content,  class: "form-builder-text-input", placeholder: "Check Option" %>
     </label>
 
     <%= link_to_remove_association "Remove", f, wrapper_class: 'checkbox', class: 'btn btn-default' %>
