--- a/app/views/manager_surveys/_checklist_question_fields.html.erb
+++ b/app/views/manager_surveys/_checklist_question_fields.html.erb
@@ -1,6 +1,16 @@
 <div class="checkbox-container" >
   <hr />
-  <div class="panel panel-default">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+
+      <h3 class="panel-title">
+        Checklist Question
+        <%= link_to_remove_association  f, wrapper_class: 'checkbox-container' do %>
+          <i class="glyphicon glyphicon-trash upper-right-icon pull-right"      aria-hidden="true" >
+          </i>
+        <% end %>
+      </h3>
+    </div>
     <div class="panel-body">
 
       <%#= f.label "Checklist Question Body" %>
