--- a/app/views/manager_surveys/_mc_question_fields.html.erb
+++ b/app/views/manager_surveys/_mc_question_fields.html.erb
@@ -1,8 +1,18 @@
 <div class="mc-container">
   <hr />
-  <div class="panel panel-default">
+  <div class="panel panel-primary">
 
+    <div class="panel-heading">
+      <h3 class="panel-title">
+        Multiple Choice
+        <%= link_to_remove_association  f, wrapper_class: 'mc-container' do %>
+          <i class="glyphicon glyphicon-trash upper-right-icon pull-right"      aria-hidden="true" >
+          </i>
+        <% end %>
+      </h3>
+    </div>
     <div class="panel-body">
+
 
       <%#= f.label "MC Question Body" %>
       <%= f.text_field :kind, value: "mc", class: "hidden"%>
