--- a/app/views/manager_surveys/new.html.erb
+++ b/app/views/manager_surveys/new.html.erb
@@ -13,10 +13,10 @@
       </div>
       <div class="panel-body">
 
-        <div class="form-group">
-          <%#= f.label :form_name %>
+
           <%= f.text_field :form_name, class: "form-control", value: "#{@study.title} -- Manager Time #{@survey_number}" %>
-        </div>
+          <label>(click to change)</label>
+
       </div>
     </div>
 
